--- a/res/layout/list_entry.xml
+++ b/res/layout/list_entry.xml
@@ -24,7 +24,7 @@
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
-	        android:gravity="center_vertical|center_horizontal"
+	        android:gravity="center_vertical"
 	    />
     </LinearLayout>
     
