--- a/res/layout/list_entry.xml
+++ b/res/layout/list_entry.xml
@@ -26,6 +26,15 @@
 	        android:layout_weight="1"
 	        android:gravity="center_vertical"
 	    />
+	    <TextView
+	    	android:id="@+id/bottomText"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:gravity="center_vertical"
+	        android:textColor="@color/green"
+	        android:textSize="12dp"
+	    />
     </LinearLayout>
     
 </LinearLayout>
