Adding johndoe@example.org:testing to the login.xml style (default value).

--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -9,6 +9,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
+            android:text="johndoe@example.org"
             android:hint="@string/email_text"
             android:inputType="textEmailAddress">
 
@@ -21,6 +22,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="textPassword"
+            android:text="testing"
             android:hint="@string/password_text"/>
 
         <Button
