Change the bottom text color to dark gray

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -2,4 +2,5 @@
 
     <style name="AppTheme" parent="android:Theme.Light" />
     <color name="green">#00FF00</color>
+    <color name="gray">#6C6C6C</color>
 </resources>
