--- a/res/layout/list_entry.xml
+++ b/res/layout/list_entry.xml
@@ -33,7 +33,7 @@
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
 	        android:gravity="center_vertical"
-	        android:textColor="@color/green"
+	        android:textColor="@color/gray"
 	        android:textSize="12dp"
 	    />
     </LinearLayout>
