--- a/res/layout/crisis.xml
+++ b/res/layout/crisis.xml
@@ -4,7 +4,7 @@
     	android:layout_height="fill_parent">
  
 	<com.google.android.maps.MapView 
-       	android:id="@+id/mapView"
+       	android:id="@+id/map_view"
        	android:layout_width="fill_parent"
        	android:layout_height="150dp"
        	android:enabled="true"
@@ -15,7 +15,7 @@
     <!-- android:apiKey="03g51D-zCFK-uOq5ZjLC22B1TI90S0E-AmE7gZQ"-->
         
 	<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-		android:id="@+id/crisisInfoList"
+		android:id="@+id/crisis_info_list"
     	android:orientation="vertical"
     	android:layout_width="fill_parent"
     	android:paddingTop="155dp"
