Major commit - changed app to Fragment based views

--- a/res/layout/crisis.xml
+++ b/res/layout/crisis.xml
@@ -2,17 +2,15 @@
 	    android:smoothScrollbar="true"  
     	android:layout_width="fill_parent" 
     	android:layout_height="fill_parent">
-	
-	<com.google.android.maps.MapView 
-       	android:id="@+id/map_view"
-       	android:layout_width="fill_parent"
-       	android:layout_height="150dp"
-       	android:clickable="true"
-       	android:apiKey="03g51D-zCFK-uOq5ZjLC22B1TI90S0E-AmE7gZQ"     
-    />
-    <!-- The following key is for the signed application! The key above is the debugging key -->
-    <!-- android:apiKey="03g51D-zCFK-uOq5ZjLC22B1TI90S0E-AmE7gZQ"-->
-	
+    	
+<!--     <fragment android:id="@+id/my_map_fragment1"
+              android:name="org.sigimera.app.SmallMapActivity"
+              android:layout_width="0dp"
+              android:layout_weight="1"
+              android:layout_height="fill_parent" >
+          Preview: layout=@layout/my_map_fragment
+    </fragment> -->
+		
 	<ListView xmlns:android="http://schemas.android.com/apk/res/android"
 		android:id="@+id/crisis_info_list"
     	android:orientation="vertical"
