--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,12 +1,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    
-     <FrameLayout
-        android:id="@+id/fragment_content"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />  
-          
+     >
+	<android.support.v4.view.ViewPager
+	        android:id="@+id/viewpager"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent" >
+	
+	        <android.support.v4.view.PagerTitleStrip
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_gravity="top" />
+	</android.support.v4.view.ViewPager>
 </LinearLayout>
