--- a/res/xml/authenticator.xml
+++ b/res/xml/authenticator.xml
@@ -1,5 +1,5 @@
 <account-authenticator xmlns:android="http://schemas.android.com/apk/res/android"
-    android:accountType="org.sigimera.app"
+    android:accountType="org.sigimera.app.android"
     android:icon="@drawable/sigimera_logo"
     android:label="@string/app_name"
     android:smallIcon="@drawable/sigimera_logo"
