--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -5,6 +5,11 @@
         android:showAsAction="never"
         android:title="@string/menu_settings"/>
     <item
+        android:id="@+id/menu_refresh"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/menu_refresh"/>
+    <item
         android:id="@+id/menu_logout"
         android:orderInCategory="100"
         android:showAsAction="never"
