--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -19,4 +19,9 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_unregister"/>
+    
+    <item 
+        android:id="@+id/menu_search"
+        android:showAsAction="always"
+        android:icon="@drawable/navigation_refresh" />
 </menu>
