--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,14 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
-        android:id="@+id/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
-    <item
         android:id="@+id/menu_refresh"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_refresh"/>
+        android:showAsAction="always"
+        android:icon="@android:drawable/ic_menu_mylocation"/>
     <item
         android:id="@+id/menu_logout"
         android:orderInCategory="100"
@@ -19,9 +14,5 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_unregister"/>
-    
-    <item 
-        android:id="@+id/menu_search"
-        android:showAsAction="always"
-        android:icon="@drawable/navigation_refresh" />
+
 </menu>
