--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <item
-        android:id="@+id/menu_refresh"
+        android:id="@+id/menu_update_location"
         android:orderInCategory="100"
         android:showAsAction="always"
         android:icon="@android:drawable/ic_menu_mylocation"/>
