--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -22,6 +22,7 @@
             android:ems="10"
             android:focusable="true"
             android:focusableInTouchMode="true"
+            android:text="johndoe@example.org"
             android:hint="@string/email_text"
             android:inputType="textEmailAddress"
             >
@@ -36,6 +37,7 @@
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:hint="@string/password_text"
+            android:text="testing"
             android:inputType="textPassword">
             <requestFocus />
         </EditText>
