--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -14,5 +14,11 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/menu_unregister"/>
+    
+	<item
+        android:id="@+id/about"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/about"/>
 
 </menu>
