--- a/res/layout/crisis_info.xml
+++ b/res/layout/crisis_info.xml
@@ -2,10 +2,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+    
+    <com.google.android.maps.MapView
+        android:id="@+id/mapview"
+        android:layout_width="fill_parent"
+        android:layout_height="200dip"
+        android:clickable="true"
+        android:apiKey="04VaZICVnaLDfMKEpL6Ai1xmWaJbDmwE20i-s8w"
+    />
 
     <ListView
         android:id="@+id/crisis_info"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >               
-    </ListView>               
+    </ListView>       
+    
 </LinearLayout> 
