--- a/res/layout/crisis_info.xml
+++ b/res/layout/crisis_info.xml
@@ -7,7 +7,8 @@
         android:id="@+id/mapview"
         android:layout_width="fill_parent"
         android:layout_height="200dip"
-        android:clickable="true"        
+        android:clickable="true"
+        android:apiKey="04VaZICVnaLDfMKEpL6Ai1xmWaJbDmwE20i-s8w"
     />
     
     <WebView
