--- a/res/layout/profile_fragment.xml
+++ b/res/layout/profile_fragment.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"    
     android:baselineAligned="true">
     
-    <ImageView
+ 	<ImageView
         android:id="@+id/avatar"
         android:paddingTop="10dip"
         android:layout_gravity="center_horizontal"
@@ -17,10 +17,34 @@
  			android:layout_margin="10dip"
  			android:background="#00FFFF" />	
     
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Something" />
-
+    <LinearLayout
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal"    
+	    android:baselineAligned="true"
+	    android:layout_gravity="top|center_horizontal">
+	    
+	    <TextView
+	        android:id="@+id/images"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content" />
+	    
+	    <TextView
+	        android:id="@+id/missing_people"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="20dip" />
+	    
+	    <TextView
+	        android:id="@+id/location"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="20dip"/>
+	    
+	    <TextView
+	        android:id="@+id/comments"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="20dip" />
+	</LinearLayout>
 </LinearLayout>
