Saveing users stats persistent

--- a/res/layout/profile_fragment.xml
+++ b/res/layout/profile_fragment.xml
@@ -1,50 +1,66 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"    
-    android:baselineAligned="true">
-    
- 	<ImageView
-        android:id="@+id/avatar"
-        android:paddingTop="10dip"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    
-    <View 
-        	android:layout_width="match_parent"
- 			android:layout_height="1dip"
- 			android:layout_margin="10dip"
- 			android:background="#00FFFF" />	
-    
+    android:baselineAligned="true"
+    android:orientation="vertical" >
+
     <LinearLayout
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:orientation="horizontal"    
-	    android:baselineAligned="true"
-	    android:layout_gravity="top|center_horizontal">
-	    
-	    <TextView
-	        android:id="@+id/images"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content" />
-	    
-	    <TextView
-	        android:id="@+id/missing_people"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginLeft="20dip" />
-	    
-	    <TextView
-	        android:id="@+id/location"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginLeft="20dip"/>
-	    
-	    <TextView
-	        android:id="@+id/comments"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:layout_marginLeft="20dip" />
-	</LinearLayout>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        android:baselineAligned="true"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/avatar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="10dp"
+            android:paddingTop="10dip" />
+        
+         <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dip" />         
+    </LinearLayout>
+    
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_margin="10dip"
+        android:background="#00FFFF" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        android:baselineAligned="true"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/images"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/missing_people"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dip" />
+
+        <TextView
+            android:id="@+id/location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dip" />
+
+        <TextView
+            android:id="@+id/comments"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dip" />
+    </LinearLayout>
+
 </LinearLayout>
