Adding a refresh button for the update everything function

--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -5,9 +5,15 @@
         android:showAsAction="always"
         android:icon="@android:drawable/ic_menu_mylocation"/>
     <item
+        android:id="@+id/menu_update_everything"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@android:drawable/ic_menu_rotate"/>    
+    <item
         android:id="@+id/menu_logout"
         android:orderInCategory="100"
         android:showAsAction="never"
+         android:icon="@android:drawable/ic_menu_rotate"
         android:title="@string/menu_logout"/>
     <item
         android:id="@+id/menu_unregister"
