--- a/res/layout/profile_fragment.xml
+++ b/res/layout/profile_fragment.xml
@@ -84,12 +84,12 @@
             android:layout_height="wrap_content"
             android:max="1000" />
 
-        <EditText
+       <!--  <EditText
             android:id="@+id/overwrite_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Overwrite your location"
-            android:inputType="text" />
+            android:inputType="text" /> -->
     </LinearLayout>
 
 </ScrollView>
